# ChangeLog for mail-client/balsa
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/balsa/ChangeLog,v 1.63 2008/05/19 16:24:31 nixnut Exp $

  19 May 2008; nixnut <nixnut@gentoo.org> balsa-2.3.22.ebuild:
  Stable on ppc wrt bug 216903

  09 May 2008; Markus Meier <maekke@gentoo.org> balsa-2.3.22.ebuild:
  amd64/x86 stable, bug #216903

  08 May 2008; Raúl Porcel <armin76@gentoo.org> balsa-2.3.22.ebuild:
  alpha/sparc stable wrt #216903

  18 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org> balsa-2.3.22.ebuild:
  fix use libnotify behavior (bug #199583),
  remove useless dependency on libtool and move gettext to DEPEND

*balsa-2.3.22 (03 Jan 2008)

  03 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml,
  -balsa-2.3.13.ebuild, -balsa-2.3.16.ebuild, +balsa-2.3.22.ebuild:
  bump to 2.3.22, notably adds rubrica addressbook support
  pruning old releases with security issues

  10 Oct 2007; Rémi Cardona <remi@gentoo.org> balsa-2.3.13.ebuild,
  balsa-2.3.16.ebuild, balsa-2.3.20.ebuild:
  update gtksourceview deps (see bug #195366) and general clean-up

  30 Sep 2007; Gilles Dartiguelongue <eva@gentoo.org>
  -files/balsa-2.2.6-deprecation.fix.patch,
  -files/balsa-2.3.4-icon-cache.patch,
  -files/balsa-gtk+-2.4-deprecation-fix.patch,
  -files/balsa-sqlite3-fix.patch, -files/balsa-ssl.patch,
  -balsa-2.0.15-r2.ebuild, -balsa-2.2.6-r3.ebuild, -balsa-2.2.6-r4.ebuild,
  -balsa-2.3.4-r1.ebuild, -balsa-2.3.8.ebuild, balsa-2.3.13.ebuild,
  balsa-2.3.16.ebuild, balsa-2.3.20.ebuild:
  pruning old versions and removing useless eclass from inherit

  25 Sep 2007; Raúl Porcel <armin76@gentoo.org> balsa-2.3.20.ebuild:
  sparc stable wrt security #193179

  22 Sep 2007; Christoph Mende <angelos@gentoo.org> balsa-2.3.20.ebuild:
  Stable on amd64 wrt security bug #193179

  21 Sep 2007; Raúl Porcel <armin76@gentoo.org> balsa-2.3.20.ebuild: