@@ -1,6 +1,14 @@
-DIST balsa-2.3.20.tar.bz2 2567267 RMD160 2287e9cfa791b56c9ba36131970e74b1af5c5b79 SHA1 0fa696aaba93c3fe992f1122765ca5bf5851df10 SHA256 6c8e6290973c3701c15aad2460f21ec87e41987e9b5a35f7faa5777f23ef35f7
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST balsa-2.3.22.tar.bz2 2597097 RMD160 e65292494d7a5807e1fb99e3dc2cff78d5c471e2 SHA1 3d935517726879776450b7016f093c42d33a8f87 SHA256 4c054430ea0ecf48f6c8fcb240d597eaeb7fdbdd757c427dcae633ca2ebf937b
-EBUILD balsa-2.3.20.ebuild 2705 RMD160 9ebc8fd85f52e26521a000d21f236b2b42cd944d SHA1 a483d77ae7942c3d781491b9f1101c52d4d06448 SHA256 5c0670771f51bc9000bd2e7605473e0785280eaf85f3d351d5d207ca8baebc26
 EBUILD balsa-2.3.22.ebuild 2167 RMD160 484e61cfddbfa6000e3843c04e0dafba28b18e70 SHA1 be718bce81b1f326cdb4a7937f29a13243c0cbd4 SHA256 ff5159356bfa1f611c52a3e495817f9b7c79bfe41689bcefb50fd028276e7afb
-MISC ChangeLog 18639 RMD160 a8f889115d029a4bdfbeb8270e6ae386f07e45dd SHA1 78648db5d03da593f9f4d65daf945eb553a441f8 SHA256 2b7e3609042ebcddfac1ff3c6566387e1813d2ff18bc08dc5b115c63ba157386
+MISC ChangeLog 18750 RMD160 7307ac02ccd6758363d0e514c6a05aabbefb236c SHA1 539ed6436e9e731d5140afbfeba03a74bbcbaa2e SHA256 be3a85299548d5cbee4175159f1d29070a05dee1c1de2c24055a9dbe21202f40
 MISC metadata.xml 328 RMD160 5beec19c647255ad4b0987a254ad0b1e47848f8e SHA1 114bf22d1d62bb7765a734333c1fbbe7a8a0b613 SHA256 561da482c4753350e21b46e8aa12e64fcb1135e1c819dd9e9a7a9004ea90606b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkg3+30ACgkQ1fmVwcYIWAaplACaA5GvYUXqHM1p2yIPyfKKGHyi
+qZMAn1JuLHMcEF68jzYBtAxk81iOk1o/
+=yr/h
+-----END PGP SIGNATURE-----
